--- a/TestProject/templates/destination/edit.html.twig
+++ b/TestProject/templates/destination/edit.html.twig
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% block tittle %}SB Admin 2 - Dashboard{% endblock %}</title>
+      <title>{% block tittle %}SB Admin 2 - Dashboard{% endblock %}</title>
 
     <!-- Custom fonts for this template-->
     <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -64,19 +64,21 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Circuit</span>
-                </a>
+            <li class="nav-item mt-2">
+              
+                    <span> <a class="ml-3  text-white" href="{{ path('app_circuit_new') }}">   <i class="fas fa-fw fa-cog"></i>Ajouter Circuit</a></span></br></br>
+                    <a class="ml-3 text-white" href="{{ path('app_circuit_index') }}"> <i class="fas fa-fw fa-folder"></i>Tous Circuit</a>
+                    </br></br>
+                    <a class="ml-3 text-white" href="{{ path('app_destination_index') }}"> <i class="fas fa-fw fa-folder"></i>Tous Destinations</a> </br></br>
+                    <a class="ml-3 text-white" href="{{ path('app_destination_new') }}"> <i class="fas fa-fw fa-cog"></i>Ajouter Destination</a>
+
+              
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Circuit:</h6>
                         <!-- <a class="collapse-item" href="buttons.html">Buttons</a>
                         <a class="collapse-item" href="cards.html">Cards</a> -->
-                        <a class="collapse-item" href="{{ path('app_circuit_new') }}">>Ajouter Circuit</a>
-                        <a class="collapse-item" href="{{ path('app_circuit_index') }}">>Tous Circuit</a>
+                    
                     </div>
                 </div>
             </li>
@@ -191,18 +193,16 @@
                     </button>
 
                     <!-- Topbar Search -->
-                    <form
-                        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                                aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+                    <form action="#"class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+    <div class="input-group">
+        <input type="text" name="query" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-primary" type="submit">
+                <i class="fas fa-search fa-sm"></i>
+            </button>
+        </div>
+    </div>
+</form>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -385,6 +385,7 @@
 
                 </nav>
 
+
 {% block title %}Edit Destination{% endblock %}
 
 {% block body %}
@@ -392,7 +393,7 @@
 
     {{ include('destination/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_destination_index') }}">back to list</a>
+
 
     {{ include('destination/_delete_form.html.twig') }}
 {% endblock %}
