--- a/TestProject/templates/classe/serve.html.twig
+++ b/TestProject/templates/classe/serve.html.twig
@@ -44,7 +44,7 @@
         <a href="index.html" class="logo m-0">Tour <span class="text-primary">.</span></a>
 
         <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu float-right">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="{{path('fr')}}">Home</a></li>
           <li class="has-children">
             <a href="#">Dropdown</a>
             <ul class="dropdown">
