--- a/TestProject/templates/destination/_form.html.twig
+++ b/TestProject/templates/destination/_form.html.twig
@@ -1,4 +1,31 @@
-{{ form_start(form) }}
+{# {{ form_start(form) }}
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+{{ form_end(form) }} #}
+
+
+
+<div class="card-body card-block">
+        {{ form_start(form,{'attr':{'novalidate':'novalidate'}},{'attr':{'class':'form-horizontal'}}) }}
+
+            <div class="row form-group">
+                <div class="col col-md-3">
+                    {{ form_label(form.countries,"Countries :") }}
+                </div>
+                <div class="col-12 col-md-9">
+                    {{ form_widget(form.countries,{'attr':{'class':'form-control'}})}}
+                    {% if form_errors(form.countries) is not empty %}
+                        <small class="form-text text-muted">{{ form_errors(form.countries) }}</small>
+                    {% endif %}
+                </div>
+            </div>
+
+            
+           
+
+            <div align="center" class="card-footer">
+                <button class="btn btn-success"><i class="zmdi zmdi-plus"></i>{{ button_label|default('Ajouter') }}</button>
+                <button class="btn btn-primary"><a style="color:white;" href="{{ path('app_destination_index') }}">Consulter Liste</a></button>
+            </div>
+        {{ form_end(form) }}
+    </div>
