--- a/TestProject/templates/circuit/index.html.twig
+++ b/TestProject/templates/circuit/index.html.twig
@@ -469,7 +469,9 @@
 
 {% block body %}
     
-
+<br>
+    <input type="text" class="form-control" id="searchInput" placeholder="Search&hellip;">
+    <br><br>
     <table class="table">
         <thead>
             <tr>
@@ -509,7 +511,26 @@
         </tbody>
     </table>
 
-   
+   <script>
+        function filterTable() {
+            const filter = document.getElementById('searchInput').value.toUpperCase();
+            const rows = document.querySelectorAll('table tr');
+            for (let i = 1; i < rows.length; i++) {
+                const cols = rows[i].querySelectorAll('td');
+                let visible = false;
+                for (let j = 0; j < cols.length; j++) {
+                    const cell = cols[j];
+                    if (cell.innerText.toUpperCase().indexOf(filter) > -1) {
+                        visible = true;
+                        break;
+                    }
+                }
+                rows[i].style.display = visible ? '' : 'none';
+            }
+        }
+        document.getElementById('searchInput').addEventListener('keyup', filterTable);
+	</script>
+	<br>
 {% endblock %}
 
 </body>
