--- a/TestProject/templates/transport/viewFront.html.twig
+++ b/TestProject/templates/transport/viewFront.html.twig
@@ -1,4 +1,4 @@
-{% extends 'baseFront.html.twig' %}
+{% include 'front.html.twig' %}
 
 {% block title %}Sélection de Transport{% endblock %}
                         
