--- a/TestProject/templates/categories/index.html.twig
+++ b/TestProject/templates/categories/index.html.twig
@@ -10,7 +10,7 @@
     <table class="table table-striped table-bordered" >
         <thead class="thead-dark">
             <tr>
-                <th scope="col">Id</th>
+                <th scope="col">Numéro</th>
                 <th scope="col">Nom</th>
                 <th scope="col">Description</th>
                 <th scope="col">Actions</th>
